fixed the contactlist alignment

--- a/PortfolioMain/resources/gridtest.css
+++ b/PortfolioMain/resources/gridtest.css
@@ -686,7 +686,7 @@ p a{
         display: grid;
         grid-column: 1 / 3;
         margin: 0;
-        justify-content: center;
+        justify-items: center;
 
     }
 
